[gd_scene load_steps=3 format=2]

[ext_resource path="res://Tools/Launcher.gd" type="Script" id=1]
[ext_resource path="res://MenuStyle.tres" type="Theme" id=2]

[node name="Launcher" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -75.5
margin_right = 196.0
margin_bottom = 75.5

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 392.0
margin_bottom = 39.0
text = "Local Game Launcher Tool"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 392.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 194.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Instances: "

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 392.0
margin_bottom = 49.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 3.0
align = 1

[node name="LaunchButton" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 392.0
margin_bottom = 151.0
text = "Launch"

[node name="KillButton" type="Button" parent="VBoxContainer"]
margin_top = 155.0
margin_right = 392.0
margin_bottom = 210.0
disabled = true
text = "Kill All"

[connection signal="pressed" from="VBoxContainer/LaunchButton" to="." method="_on_LaunchButton_pressed"]
[connection signal="pressed" from="VBoxContainer/KillButton" to="." method="_on_KillButton_pressed"]
